examples/failing/RequalifyErrors/M1.purs
module RequalifyErrors.M1 where

data X = X
